// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteFilterListModal false canDeleteFilter privilege renders as disabled delete button 1`] = `
<div>
  <button
    class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-base-disabled"
    data-test-subj="mlFilterListsDeleteButton"
    disabled=""
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent"
    >
      <span
        color="inherit"
        data-euiicon-type="trash"
      />
      Delete
    </span>
  </button>
</div>
`;

exports[`DeleteFilterListModal renders as disabled delete button when no lists selected 1`] = `
<div>
  <button
    class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-base-disabled"
    data-test-subj="mlFilterListsDeleteButton"
    disabled=""
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent"
    >
      <span
        color="inherit"
        data-euiicon-type="trash"
      />
      Delete
    </span>
  </button>
</div>
`;

exports[`DeleteFilterListModal renders as enabled delete button when a list is selected 1`] = `
<div>
  <button
    class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-danger"
    data-test-subj="mlFilterListsDeleteButton"
    type="button"
  >
    <span
      class="emotion-euiButtonDisplayContent"
    >
      <span
        color="inherit"
        data-euiicon-type="trash"
      />
      Delete
    </span>
  </button>
</div>
`;
